# claude-code-log

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN_PHASE12.md  README.md  justfile  mkdocs.yml  pyproject.toml  ty.toml
.claude/: settings.json
.claude/skills/tool-renderer/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
claude_code_log/: assistant_parser.py  cache.py  cli.py  converter.py  dag.py  fast_cache.py  git_remote.py  html_renderer.py  html_tool_renderers.py  markdown_plugins.py  models.py  parallel_cache.py  parser.py  plugins.py  profiling.py  renderer.py  renderer_timings.py  scanner.py  system_parser.py  transcript_parser.py  tui.py  user_parser.py  utils.py  workflow.py
claude_code_log/factories/: __init__.py  agent_metadata_factory.py  assistant_factory.py  attachment_factory.py  meta_factory.py  system_factory.py  task_notification_factory.py  teammate_factory.py  tool_factory.py  transcript_factory.py  user_factory.py
claude_code_log/html/: __init__.py  ansi_colors.py  assistant_formatters.py  async_formatter.py  renderer.py  renderer_code.py  system_formatters.py  teammate_formatter.py  tool_formatters.py  tool_renderers.py  user_formatters.py  utils.py
claude_code_log/html/templates/: index.html  transcript.html
claude_code_log/html/templates/components/: global_styles.css  message_styles.css  page_nav_styles.css  project_card_styles.css  search.html  session_nav.html  session_nav_styles.css  teammate_styles.css  timeline.html  todo_styles.css  token_chart.css  token_chart.html
claude_code_log/json/: renderer.py
claude_code_log/markdown/: renderer.py
claude_code_log/migrations/: 001_initial_schema.sql  002_html_cache.sql  003_html_pagination.sql  004_html_pagination_variant.sql  005_session_team_name.sql  __init__.py  runner.py
claude_code_log/templates/: transcript.html
claude_code_log/templates/components/: filter_styles.css  global_styles.css  message_styles.css  project_card_styles.css  session_nav.html  session_nav_styles.css  timeline_styles.css  timezone_converter.js
dev-docs/: FOLD_STATE_DIAGRAM.md  MESSAGE_REFACTORING.md  MESSAGE_REFACTORING2.md  REMOVE_ANTHROPIC_TYPES.md  TEMPLATE_MESSAGE_CHILDREN.md  TEMPLATE_MESSAGE_REFACTORING.md  agents.md  application_model.md  css-classes.md  dag.md  implementing-a-tool-renderer.md  messages.md  plugins.md  rendering-architecture.md  rendering-next.md  restoring-archived-sessions.md  teammates.md  workflows.md
dev-docs/messages/: assistant_text.json  queue_operation.json  summary.json  system.json  user_text.json  user_tool_result.json
dev-docs/messages/tools/: Read-tool_result_error.json  Read-tool_result_error.jsonl  askuserquestion.json  bash.json  edit.json  glob.json  grep.json  read.json  task.json  todowrite.json
docs/: gen_pages.py  hooks.py  index.md
docs/cache/: 7ce8b3c7-a128-4419-b316-c1071029441a.json  index.json
docs/reference/: cli.md
scripts/: extract_message_samples.py  gen_nested_agents_fixture.py  gen_workflow_fixture.py  generate_example_output.py  generate_style_guide.py  generate_tui_docs.py  generate_tui_screenshots.py  view.sh
scripts/style_guide_output/: index_style_guide.html  index_style_guide.md  transcript_style_guide.html  transcript_style_guide.md
stubs/pygments/: __init__.pyi  formatter.pyi  lexer.pyi  util.pyi
stubs/pygments/formatters/: __init__.pyi
stubs/pygments/lexers/: __init__.pyi
test/: README.md  conftest.py  snapshot_serializers.py  test_ansi_colors.py  test_askuserquestion_rendering.py  test_async_agents.py  test_away_summary.py  test_bash_rendering.py  test_branch_label_source.py  test_cache.py  test_cache_integration.py  test_cache_sqlite_integrity.py  test_cli.py  test_command_handling.py  test_commit_linkifier.py  test_compact_mode.py  test_context_command.py  test_continuation_fork.py  test_continuation_pairing.py  test_cron_rendering.py  test_dag.py  test_dag_integration.py  test_date_filtering.py  test_detail_levels.py  test_exitplanmode_rendering.py  test_grep_rendering.py  test_hook_attachment_rendering.py  test_hook_summary.py  test_html_regeneration.py  test_ide_tags.py  test_index_timezone.py  test_integration_realistic.py  test_markdown_helpers.py  test_markdown_rendering.py  test_markdown_timestamps.py  test_memory_browser.py  test_memory_rendering.py  test_message_filtering.py  test_message_types.py  test_migrations.py  (+50 more)
test/__snapshots__/: test_snapshot_html.ambr  test_snapshot_markdown.ambr
test/_plugins/clmail/: pyproject.toml
test/_plugins/clmail/src/claude_code_log_clmail_test/transformers/: hook_demotion.py  tool_communicate.py  tool_communicate_result.py
test/test_data/: cron_tools.jsonl  dag_fork.jsonl  dag_resume.jsonl  dag_simple.jsonl  dag_within_fork.jsonl  debug_image_message.jsonl  hook_attachments.jsonl  memory_interactions.jsonl  task_id_linking_cross_session.jsonl  task_id_linking_poison.jsonl  task_id_linking_real_world_bash.jsonl
test/test_data/async_agents/: README.md  eb000000-0000-4000-8000-000000000001.jsonl
test/test_data/async_agents/eb000000-0000-4000-8000-000000000001/subagents/: agent-cccc333.jsonl
test/test_data/real_projects/-experiments-ideas/: 03eb5929-52b3-4b13-ada3-b93ae35806b8.jsonl  a95fea4a-b88a-4e49-ac07-4cc323d8700c.jsonl
test/test_data/real_projects/-experiments-worktrees/: ef958aa1-0e93-49f0-bb71-150f63befcd1.jsonl
test/test_data/real_projects/-experiments-worktrees/ef958aa1-0e93-49f0-bb71-150f63befcd1/subagents/: agent-a36efb2a1231c41e2.jsonl  agent-a4ca7529859c158c2.jsonl  agent-a4ca7529859c158c2.meta.json  agent-a52886dc180afb356.jsonl  agent-a52886dc180afb356.meta.json  (+4 more)
test/test_data/workflow_basic/: 11110000-0000-4000-8000-000000000001.jsonl
test/test_data/workflow_basic/11110000-0000-4000-8000-000000000001/workflows/: wf_demo01.json
work/: agent-hierarchies-design.md  async-agents.md  dynamic-workflow-pr3-design.md  dynamic-workflow-support.md  ghosting-epic-plan.md  obsidian-friendly-output.md  parse-memory-spike.md  phase-c-agent-transcripts.md  simplify-converter-renderer.md  tool-renderer-plugins.md
(+6 files in other folders)
