[project]
name = "handgemacht-claude-code-log"
version = "1.4.0"
description = "Convert Claude Code transcript JSONL files to HTML. Handgemacht fork (by Marco Rotili) of daaain/claude-code-log."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Marco Rotili", email = "marco.livio.rotili@gmail.com" },
    { name = "Daniel Demmel", email = "hello@danieldemmel.me" },
    { name = "Edward Z. Yang", email = "ezyang@mit.edu" },
]

dependencies = [
    "click>=8.3.0",
    "dateparser>=1.2.2",
    "pydantic>=2.12.0",
    "jinja2>=3.1.6",
    "mistune>=3.1.4",
    "toml>=0.10.2",
    "textual>=6.5.0",
    "packaging>=25.0",
    "gitpython>=3.1.45",
    "pygments>=2.19.2",
]

[project.urls]
"Original project" = "https://github.com/daaain/claude-code-log"

[project.scripts]
claude-code-log = "claude_code_log.cli:main"
handgemacht-claude-code-log = "claude_code_log.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/docs", "/test", "/scripts"]

[tool.hatch.build.targets.wheel]
# Dist name (handgemacht-claude-code-log) differs from the import package
# (claude_code_log), so name the package explicitly for the wheel build.
packages = ["claude_code_log"]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Parallelise across all cores; worksteal rebalances heavyweight integration
# tests across workers (default `load` left workers idle while one slogged
# through the queue). Override with `-n0 --dist=no` for serial runs, or with
# `--dist=no --pdb` for debugging (worksteal distribution must be disabled).
addopts = "-n auto --dist=worksteal"
markers = [
    "tui: TUI tests using Textual framework (requires isolated event loop)",
    "browser: Browser integration tests using Playwright (requires Chromium)",
    "snapshot: Snapshot tests that must run serially (syrupy file ordering)",
    "integration: Integration tests with realistic JSONL data",
    "slow: Slower tests that measure performance (may take several seconds)",
    "benchmark: Performance benchmarks that output to GitHub Job Summary",
]

[tool.ty.environment]
# Use custom stubs for untyped libraries
extra-paths = ["stubs"]

[tool.ty.src]
# docs/gen_pages.py is a build-time mkdocs-gen-files script: it imports
# `mkdocs_gen_files` (a docs-only dependency) and the standalone helpers in
# scripts/ via sys.path manipulation, neither of which ty can resolve in the
# default environment. It is not part of the type-checked source (pyright only
# `include`s claude_code_log), so exclude it here to match that intent.
exclude = ["docs"]

[tool.pyright]
# Pyright configuration with strict settings
include = ["claude_code_log"]           # TODO: , "test"
exclude = ["**/__pycache__", "dist"]
stubPath = "stubs"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnknownMemberType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportPrivateImportUsage = true
reportUntypedFunctionDecorator = true
reportFunctionMemberAccess = true
reportIncompatibleMethodOverride = true

[tool.ruff]
target-version = "py310"

[tool.coverage.run]
source = ["claude_code_log"]
omit = ["*/tests/*", "*/test/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
    "ruff>=0.11.2",
    "pytest-xdist[psutil]>=3.6.1",
    "pyright>=1.1.408",
    "vulture>=2.14",
    "ty>=0.0.11",
    "pytest-playwright>=0.7.0",
    "syrupy>=5.0.0",
    # Reference test plugin for the plugin-system test suite. Doubles as
    # the canonical example for third-party plugin authors. See
    # test/_plugins/clmail/README.md.
    "claude-code-log-clmail-test",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocs-click>=0.8.1",
    "mkdocs-gen-files>=0.5.0",
]

[tool.uv.sources]
claude-code-log-clmail-test = { path = "test/_plugins/clmail", editable = true }
